--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Nicolas Braem
-	email = nicolas.braem@gmail.com
+	name = fabricecops
+	email = fabricecops@gmail.com
 [color]
 	ui = true
 [alias]
